--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "name": "notion-react-starter",
   "version": "0.1.0",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@neurosity/notion": "^5.3.0",
     "@reach/router": "^1.2.1",
+    "animate.css": "^4.1.1",
+    "chart.js": "^4.2.1",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.7.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.3",
-    "react-use": "^13.21.0"
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "react-use": "^13.21.0",
+    "sass": "^1.58.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
