--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notion-react-starter",
+  "name": "BDR_App",
   "version": "0.1.0",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
