--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Notion React Starter",
-  "name": "Notion React Starter",
+  "short_name": "BDR_App",
+  "name": "BDR_App",
   "icons": [
     {
       "src": "favicon.png",
